feat(catalog): add atomic item creation
